src/objects/Valuation_Table__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Purchase Plan</fullName>
                </value>
                <value>
                    <fullName>Buy to Let Purchase Plan</fullName>
                </value>
                <value>
                    <fullName>Home Purchase Plan Premier</fullName>
                </value>
                <value>
                    <fullName>Home Purchase Scotland</fullName>
                </value>
                <value>
                    <fullName>Help to Buy Home Purchase Plan</fullName>
                </value>
                <value>
                    <fullName>Buy to Let Purchase Plan Scotland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HPP_extended_opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HPP extended opportunity</label>
        <referenceTo>HPP_extended_opportunity__c</referenceTo>
        <relationshipLabel>Valuation Tables</relationshipLabel>
        <relationshipName>Valuation_Tables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minimum_property_value__c</fullName>
        <label>Minimum property value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_of_valuation__c</fullName>
        <label>Price of valuation</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_up_to_the_value_of__c</fullName>
        <label>Maximum property value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_valuation__c</fullName>
        <label>Type of valuation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>MV Plus Homebuyers</fullName>
                </value>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>Buy to Let</fullName>
                </value>
                <value>
                    <fullName>Buy to Let and Home Buyers</fullName>
                </value>
                <value>
                    <fullName>HPP Premier: 24hr Valuation</fullName>
                </value>
                <value>
                    <fullName>HPP Premier: 48hr Valuation</fullName>
                </value>
                <value>
                    <fullName>Valuation already instructed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Valuation Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Type_of_valuation__c</columns>
        <columns>Category__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Minimum_property_value__c</columns>
        <columns>Property_up_to_the_value_of__c</columns>
        <columns>Price_of_valuation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Premier_Valuation</fullName>
        <columns>NAME</columns>
        <columns>Minimum_property_value__c</columns>
        <columns>Property_up_to_the_value_of__c</columns>
        <columns>Type_of_valuation__c</columns>
        <columns>Price_of_valuation__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Home Purchase Plan Premier</value>
        </filters>
        <label>Premier Valuation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>matt</fullName>
        <columns>NAME</columns>
        <columns>Minimum_property_value__c</columns>
        <columns>Property_up_to_the_value_of__c</columns>
        <columns>Type_of_valuation__c</columns>
        <columns>Price_of_valuation__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>matt</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>V{0000}</displayFormat>
        <label>Valuation Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Valuation Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>